--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ pymdown-extensions
 mkdocs-material-extensions
 mkdocs-jupyter
 itables
-
+git+https://github.com/FHIR-Aggregator/fhir-query.git
+lifelines
